--- a/views/receipt.ejs
+++ b/views/receipt.ejs
@@ -107,12 +107,17 @@
         <table class="totals-table">
             <tbody>
                 <tr>
-                    <td class="label-col" style="width: 55%;">
+                    <td class="label-col" style="width: 40%; vertical-align: top;">
                         NO OF TESTS: <%= receiptData.num_tests || items.length %><br>
                         TESTS CONDUCTED AT: <%= receiptData.conducted_at || 'N/A' %><br>
                         Payment: <%= receiptData.payment_method || 'N/A' %>
                     </td>
-                    <td class="label-col highlight" style="width: 25%; vertical-align: top; text-align: right;">
+                    <td style="width: 20%; text-align: center; vertical-align: middle; border-left: 1px solid #e0e0e0; border-right: 1px solid #e0e0e0;">
+                        <% if (typeof labLogoPath !== 'undefined' && labLogoPath) { %>
+                            <img src="<%= labLogoPath %>" alt="Lab Logo" style="max-height: 60px; max-width: 120px;">
+                        <% } %>
+                    </td>
+                    <td class="label-col highlight" style="width: 20%; vertical-align: top; text-align: right;">
                         TOTAL MRP<br>
                         SUBTOTAL<br>
                         OVERALL DISC (<%= receiptData.overallDiscountPercentageFormatted %>%)<br>
